--- a/ThinBing.csproj
+++ b/ThinBing.csproj
@@ -64,10 +64,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="GreyMan.ico" />
+    <Content Include="Resources\GreyMan.ico" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
