--- a/ThinBing.csproj
+++ b/ThinBing.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Resources\GitHubReleases.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\Log.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
