Moved a bunch of stuff around to make it less messy. It stores the last weeks worth of images with the numerical representation of the day of the week

--- a/ThinBing.csproj
+++ b/ThinBing.csproj
@@ -60,6 +60,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Log.cs" />
+    <Compile Include="Utils\Startup.cs" />
+    <Compile Include="Utils\Updates.cs" />
+    <Compile Include="Utils\Web.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
